[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myutils"
version = "0.1.0"
description = "一个个人多功能CLI工具箱"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "click",
    "requests",
]

[project.scripts]
myutils = "myutils.cli:cli"